--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.1",
