--- a/package.json
+++ b/package.json
@@ -52,16 +52,16 @@
   "devDependencies": {
     "@types/react-credit-cards": "^0.8.0",
     "@typescript-eslint/eslint-plugin": "4.15.1",
-    "@typescript-eslint/parser": "4.15.1",
+    "@typescript-eslint/parser": "^4.29.2",
     "babel-eslint": "10.1.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "12.3.1",
     "eslint-config-prettier": "7.2.0",
     "eslint-config-react-app": "6.0.0",
-    "eslint-import-resolver-typescript": "2.4.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-loader": "4.0.2",
     "eslint-plugin-flowtype": "5.2.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-react": "7.22.0",
