--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,6 @@
 {
   "plugins": ["prettier", "@typescript-eslint", "import"],
-  "extends": [
-    "airbnb-typescript",
-    "react-app",
-    "prettier",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/recommended-requiring-type-checking"
-  ],
+  "extends": ["airbnb-typescript", "react-app", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json",
